Colaboratory를 통해 생성됨

--- a/py03_conditional.ipynb
+++ b/py03_conditional.ipynb
@@ -6,7 +6,8 @@
       "name": "py03_conditional.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOP8HXLUu5fM5NreFFUeEn+",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPxvNYY7kaPHzEzLlgDIjDp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +28,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/YUEUN328/202110_itw_lab_python/blob/main/py03_conditional.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 조건문(Conditional Statement)"
+      ],
+      "metadata": {
+        "id": "FjCnL1l0cZGK"
+      }
     },
     {
       "cell_type": "markdown",
@@ -166,6 +176,7 @@
         "    조건식1을 만족할 때 실행할 문장(들)\n",
         "elif 조건식2:\n",
         "    조건식2를 만족할 때 실행할 문장(들)\n",
+        "...    \n",
         "else:\n",
         "    위의 모든 조건식을 만족하지 못할 때 실행할 문장(들)\n",
         "```        "
