Colaboratory를 통해 생성됨

--- a/py18_data_analysis.ipynb
+++ b/py18_data_analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "py18_data_analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMMWTLDBw/NGOBMsNZIBSz6",
+      "authorship_tag": "ABX9TyPLhESxrx7guAStQNLv/bMD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1452,6 +1452,473 @@
           },
           "metadata": {},
           "execution_count": 86
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# NumPy 통계 함수/메서드\n",
+        "\n",
+        "```\n",
+        "np.function_name(array) 함수\n",
+        "np.ndarray.method_name() 메서드\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "TyDbKOeXY0Dy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "py5mKEJKZZrs",
+        "outputId": "7e27cd95-c68d-43e9-8e24-e33b410b4331"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[37 12 72  9 75  5 79 64 16  1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 평균\n",
+        "print(np.mean(arr))  # 함수 호출\n",
+        "print(arr.mean())    # 메서드 호출"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4JPCWjbpZb8E",
+        "outputId": "db3903b7-0197-42d6-d335-0b97ac185a94"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "37.0\n",
+            "37.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('합계:', np.sum(arr), arr.sum())\n",
+        "print('평균:', np.mean(arr), arr.mean())\n",
+        "print('분산:', np.var(arr), arr.var())  # variance\n",
+        "print('표준편차:', np.std(arr), arr.std())  # standard deviation\n",
+        "print('최댓값:', np.max(arr), arr.max())\n",
+        "print('최솟값:', np.min(arr), arr.min())\n",
+        "print('중앙값:', np.median(arr))  # ndarray는 중앙값을 리턴하는 메서드를 제공하지 않음!\n",
+        "# 중앙값: 배열의 원소들을 정렬했을 때 가운데 있는 값."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RFhXTO4KZ9dQ",
+        "outputId": "e2431503-eace-4509-ab46-236fae21c391"
+      },
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "합계: 370 370\n",
+            "평균: 37.0 37.0\n",
+            "분산: 933.2 933.2\n",
+            "표준편차: 30.548322376196047 30.548322376196047\n",
+            "최댓값: 79 79\n",
+            "최솟값: 1 1\n",
+            "중앙값: 26.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.sort(arr)  # 배열을 오름차순 정렬"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Y3Fx4gD1boln",
+        "outputId": "d5aa240d-b565-45f0-ad66-efebf72a0199"
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1,  5,  9, 12, 16, 37, 64, 72, 75, 79])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 90
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(16 + 37) / 2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pbqVQ4T7b5It",
+        "outputId": "86d2dfd3-df13-4944-cc77-e65c5ae1d84e"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "26.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 92
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2차원 배열에서의 통계 함수/메서드"
+      ],
+      "metadata": {
+        "id": "LMMuIyVCcjqM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.random.seed(2)\n",
+        "arr = np.random.randint(100, size=(3, 4))\n",
+        "print(arr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z3pf8W0-b9kR",
+        "outputId": "8684d7f8-0645-4844-ed31-6133551735ce"
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[40 15 72 22]\n",
+            " [43 82 75  7]\n",
+            " [34 49 95 75]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 2차원 배열의 모든 원소들의 합\n",
+        "np.sum(arr)  # arr.sum(axis=None)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7VC5AL2Oc8k7",
+        "outputId": "4a6eccc6-22e9-4d49-f271-5a427d30eaf2"
+      },
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "609"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 95
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# row index가 증가하는 방향으로 원소들의 합\n",
+        "np.sum(arr, axis=0)  # arr.sum(axis=0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UpUGNZYOd5eF",
+        "outputId": "0bf32b5e-5d30-451e-8a10-81da84df0b17"
+      },
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([117, 146, 242, 104])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 96
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# column index가 증가하는 방향으로 원소들의 합\n",
+        "np.sum(arr, axis=1)  # arr.sum(axis=1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AfzywGsQefzF",
+        "outputId": "a8631678-64b5-43e9-9b47-418e9c1d43ca"
+      },
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([149, 207, 253])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 99
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.sum(arr, axis=1, keepdims=True)  # arr.sum(axis=1, keepdims=True)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rptICZ8CeyGh",
+        "outputId": "640f9257-32f9-40a3-80cb-1bc92290813a"
+      },
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[149],\n",
+              "       [207],\n",
+              "       [253]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 100
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 전체 원소의 평균\n",
+        "np.mean(arr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zmztFlf8e_Nr",
+        "outputId": "93f995d7-78b3-4f7a-d5b2-f657f471a5bc"
+      },
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "50.75"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 101
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# row index가 증가하는 방향으로 원소들의 평균\n",
+        "np.mean(arr, axis=0, keepdims=True)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wLlCRYzlf7V0",
+        "outputId": "8c523849-216a-4ac0-bd2f-eaa9de0c6d93"
+      },
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[39.        , 48.66666667, 80.66666667, 34.66666667]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 102
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# column index가 증가하는 방향으로 원소들의 평균\n",
+        "np.mean(arr, axis=1, keepdims=True)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HCb9YyxYgHK-",
+        "outputId": "aac9527b-cb43-458a-a431-8821127e7ad6"
+      },
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[37.25],\n",
+              "       [51.75],\n",
+              "       [63.25]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 103
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Ex.\n",
+        "\n",
+        "* 0 이상 100 미만의 정수 난수 10개로 이루어진 1차원 배열을 생성, 출력.\n",
+        "* 배열에서 평균값보다 큰 값들로 이루어진 배열을 만들고 출력. (boolean indexing)"
+      ],
+      "metadata": {
+        "id": "pS06BSIEg4PB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr = np.random.randint(100, size=10)\n",
+        "print(arr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IhDmd3FZgicC",
+        "outputId": "22faaa02-f813-4e94-bd82-8f45922c5900"
+      },
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[85 47 63 31 90 20 37 39 67  4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.mean(arr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Yj4UyPS3ho6F",
+        "outputId": "6e1aff96-6907-4f60-e3f5-7cdccf29382e"
+      },
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "48.3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 107
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr[arr > np.mean(arr)]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WrwaRe41hzjC",
+        "outputId": "6cef06aa-6937-4cb5-b026-ccd653c6e3d1"
+      },
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([85, 63, 90, 67])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 109
         }
       ]
     }
